# fishhook

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.eggs/Pygments-2.9.0-py3.9.egg/EGG-INFO/: RECORD
.github/: dependabot.yaml
.github/workflows/: python-build-publish.yaml
fishhook/: __init__.py  _asmmodule.c  asm.py  fishhook.py  jit.py  tests.py
stitch/: __init__.py
